# NavitiaRequetor

./: CMakeLists.txt  README.md  README.txt
data/: .~lock.test.csv#  test.csv
data/input/: Requetes.csv  test.csv
data/output/: response1  response10  response11  response12  response13  response14  response15  response16  response17  response18  response19  response2  response20  response21  response3  response4  response5  response6  response7  response8  response9
data/references/: Banlieue-Banlieue14.json  Banlieue-Banlieue15.json  Banlieue-Banlieue16.json  Banlieue-Banlieue17.json  Banlieue-Banlieue18.json  Banlieue-Banlieue20.json  Banlieue-Paris10.json  Banlieue-Paris2.json  Banlieue-Paris4.json  Banlieue-Paris5.json  Banlieue-Paris6.json  Banlieue-Paris7.json  Banlieue-Paris9.json
data/references/BB/: Banlieue-Banlieue1.json  Banlieue-Banlieue2.json  Banlieue-Banlieue9.json
data/references/BP/: Banlieue-Paris1.json
data/references/requests/: requestsBB.csv  requestsBP.csv
data/references/responses/BB/: Banlieue-Banlieue1.json  Banlieue-Banlieue10.json  Banlieue-Banlieue2.json  Banlieue-Banlieue3.json  Banlieue-Banlieue4.json  (+5 more)
data/requests/: requests.csv  requestsBB.csv  requestsBP.csv
data/responses/: dict.csv  test.json
data/statistics/: dict.csv
data/statistics/BB/: referenceModeBB.csv
data/statistics/BP/: referenceModeBP.csv
doc/: OD_references.xlsx
include/: Curler.h  RequestCreator.h  Requetor.h
src/: CMakeLists.txt  Curler.cpp  RequestCreator.cpp  Requestor.py  Requetor.cpp  ResponseParser.py  SystemXParser.py  analysis.py
(+33 files in other folders)
